# playdown

./: .claude  .gitignore  LICENSE  NOTICE  README.md  claude.md  index.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
samples/: welcome.md
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  terminal.rs
src/lib/: fileActions.ts  fileIcons.ts  fileKind.ts  types.ts
src/lib/actions/: dnd.ts
src/lib/assets/fonts/: juliamono.css
src/lib/components/: ContextMenu.svelte  EditorGroup.svelte  EditorPane.svelte  FileTree.svelte  ImagePane.svelte  Layout.svelte  Outline.svelte  PreviewPane.svelte  PromptModal.svelte  QuickOpen.svelte  Settings.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  TerminalPanel.svelte  TerminalView.svelte
src/lib/editor/: frontmatter.ts  setup.ts
src/lib/markdown/: render.ts  slug.ts
src/lib/stores/: drag.svelte.ts  groups.svelte.ts  keymap.svelte.ts  settings.svelte.ts  tabs.svelte.ts  terminal.svelte.ts  ui.svelte.ts  workspace.svelte.ts
src/lib/tauri/: clipboard.ts  fs.ts  zoom.ts
